Replace return type of scheduling Policy's getOrderedTasks by LinkedList<EligibleTaskDescriptor> #2552
- changed the scheduling Policy return type to LinkedList in order to avoid copying